# Pikastro

./: .gitignore  code.code-workspace
src/dynax/: analysis.ipynb
src/dynax/dynax/components/: timeseries_gen.py
src/dynax/dynax/models/: preprocessing.py
src/pikastro/: Dockerfile  Makefile  openapi.yaml  pyproject.toml  requirements.txt
src/pikastro/configs/: development.yaml  local.yaml
src/pikastro/pikastro/app/: config.py  main.py
src/pikastro/pikastro/app/routers/: security.py  solar.py
src/pikastro/tests/: test_load_config.py
src/pikastro/tests/configs/: local.yaml
src/portal/: package-lock.json  package.json  tsconfig.json
src/portal/app/: layout.tsx  page.tsx
src/portal/app/auth/: page.tsx
src/portal/app/auth/components/: user-auth-form.tsx
src/portal/app/chat/: page.tsx
src/portal/components/: AIResponse.tsx  UserInput.tsx  chatwindow.tsx  layout.tsx  sidebar.tsx
